# goread

./: .gitattributes  .gitignore  README.en.md  README.md  README.zh.md  file_format_filter_control_style.html  go.mod  go.sum  index.html  main.go  package-lock.json  package.json  vite.config.ts  书籍格式支持方案.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/ios-bridge/: ExternalFileOpenBridge.swift  SafeAreaBridge.swift  StatusBarBridge.swift  StoragePermissionBridge.swift  VolumeKeyBridge.swift
src-tauri/plugins/tauri-plugin-native-tts/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-native-tts/android/: build.gradle.kts  proguard-rules.pro  settings.gradle
src-tauri/plugins/tauri-plugin-native-tts/permissions/: default.toml
src-tauri/plugins/tauri-plugin-native-tts/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: commands.rs  epub_commands.rs  html_commands.rs  lib.rs  main.rs  markdown_commands.rs  mobi_commands.rs  models.rs  pdf_commands.rs  tts_commands.rs  txt_commands.rs
src-tauri/src/commands/: backup.rs  book.rs  bookmark.rs  cover.rs  filesystem.rs  group.rs  import.rs  log.rs  mod.rs  stats.rs
src-tauri/src/cover/: mod.rs
src-tauri/src/formats/: mod.rs
src-tauri/src/formats/common/: mod.rs
src-tauri/src/formats/epub/: cache.rs  engine.rs  mod.rs  nav.rs
src-tauri/src/formats/html/: mod.rs
src-tauri/src/formats/markdown/: mod.rs
src-tauri/src/formats/mobi/: cache.rs  engine.rs  mod.rs
src-tauri/src/formats/mobi/engine/: patterns.rs  pdb.rs  resource.rs  (+2 more)
src-tauri/src/formats/txt/: mod.rs  toc_parser.rs
src-tauri/src/pdf/: cache.rs  engine.rs  font_manager.rs  mod.rs  performance.rs  preload_predictor.rs  renderer.rs  test_utils.rs  text_extractor.rs  types.rs
src-tauri/src/tts/: cursor.rs  mod.rs  session_manager.rs  slicer.rs  types.rs
src-tauri/src/tts/dispatcher/: epub.rs  html_text.rs  mobi.rs  txt.rs
(+321 files in other folders)
